# python-project-50

./: .coverage  .coveragerc  Makefile  README.md  coverage.xml  pyproject.toml  sonar-project.properties
.github/workflows/: README.md  python-app.yml
gendiff/: __init__.py  build_diff.py  gendiff.py  parser.py
gendiff/formatter/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_python_package/scripts/: gendiff.py
tests/: test_generate_diff.py
